# local-ollama-bench

./: .gitignore  README.md  pyproject.toml  responses_t0.7.jsonl  responses_t0.jsonl  responses_t07_noseed.jsonl  runs_t0.csv  runs_t07.csv  runs_t07_noseed.csv  temperature_experiment_notes.md
src/local_ollama_bench/: __init__.py  cli.py  prompt_suite.py  prompt_suite_cli.py  serve.py  server.py  stream_bench.py
src/local_ollama_bench/prompts/: benchmark_prompts.txt
src/local_ollama_bench/static/: index.html
